infrastructure/k8s/shared/vault/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: hermes
